# npm-package-age

./: .gitignore  Cargo.toml  changelog.md  readme.md
example/: package-lock.json
example-lockfile2/: package-lock.json  package.json
src/: fetch.rs  main.rs  package.rs  parse.rs  structs.rs
