[package]
name = "npm-package-age"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = "0.3.19"
reqwest = "0.11.8"
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }