[package]
name = "npm-package-age"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.13", features = ["derive"] }
csv = "1.1.6"
futures = "0.3.19"
reqwest = "0.11.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
